fix: 컨트롤러 테스트의 사용자 인증 관련 오류 해결 및 테스트 안정성 개선
## 문제 상황
컨트롤러 테스트 수행 중 인증 정보 누락으로 인해 다수의 테스트 케이스에서 400/500 에러가 발생함.
특히 `@PreAuthorize`, `@CurrentUser` 어노테이션이 적용된 컨트롤러 테스트에서 `addFilters=false` 설정만으로는 인증 정보가 정상적으로 전달되지 않는 문제 발생.

## 변경 사항

### 사용자 인증 정보 추가
- **UserControllerTest.java**
  - `getCurrentUser`, `updateUser`, `deleteUser`, `getUserInterest`, `updateUserInterest` 테스트에 `UserPrincipal` 인증 정보 추가
  - `org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.user` 임포트 추가
  - 테스트 실행 시 사용자 정보 (`userId=1L`, `username="testuser"`, `role="USER"`) 일관되게 적용

- **ContentControllerTest.java**
  - `generateContent` 테스트에 인증 정보 추가하여 `@PreAuthorize("isAuthenticated()")` 통과 가능하도록 수정
  - 응답 메시지 검증 로직 강화 (`assertEquals(expectedMessage, actualMessage)` 추가)

- **LikeControllerTest.java**
  - `likeQuote`, `unlikeQuote` 테스트에 인증 정보 추가
  - 400 Bad Request 응답 문제 해결 (누락된 필드 추가)

### 경로 불일치 문제 수정
- **SummaryControllerTest.java**
  - `getSummary` 테스트의 요청 경로 수정 (`/summaries/1 → /books/1/summaries/1`)
  - 실제 컨트롤러의 `@RequestMapping` 경로와 일치하도록 조정하여 불필요한 404 에러 제거

### 테스트 어설션 보완
- **PexelsClientTest.java**
  - `searchVideo_Success` 테스트에서 기대값을 `FALLBACK_VIDEO`가 아닌, 실제 모의 응답에서 반환된 URL로 변경
  - 테스트 로직과 실제 구현 간의 일관성 확보

### JPA 쿼리 오류 해결
- **ShortFormContentRepository.java**
  - `search` 메소드의 JPQL 쿼리 유효성 검증 오류 수정 (`deleted` 필드 참조 문제 해결)
  - 도메인 모델과 쿼리 정합성 확보

## 테스트 결과
- `UserControllerTest`: ✅ 5/5 테스트 성공
- `ContentControllerTest`: ✅ 1/1 테스트 성공
- `LikeControllerTest`: ✅ 2/2 테스트 성공
- `SummaryControllerTest`: ✅ 1/1 테스트 성공
- `PexelsClientTest`: ✅ 3/3 테스트 성공
- `StoblyxApplicationTests`: ✅ 컨텍스트 로드 테스트 성공

## 주요 인사이트
1. **Spring Security 테스트 시 `@PreAuthorize`, `@CurrentUser` 어노테이션이 활성화된 경우, `addFilters=false` 설정만으로는 충분하지 않음**
   → `SecurityMockMvcRequestPostProcessors.user`를 활용해 명시적으로 인증 정보를 제공해야 함.
2. **컨트롤러 테스트의 요청 경로는 실제 컨트롤러의 `@RequestMapping` 경로와 반드시 일치해야 함**
   → 테스트 실패 시 API 설계 변경 여부도 함께 점검 필요.
3. **테스트 어설션은 실제 응답 데이터와 동기화되어야 하며, 하드코딩된 값보다 동적으로 검증할 수 있는 방식이 바람직함**
   